--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <canvas id="canvas"></canvas>
         <div class="gui">
             <label for="strokeSize">Stroke Size: </label><input id="strokeSize" type="range" min="5" max="15" value="2" onchange="changeStrokeSize(this.value)">
-            <button onclick="clearCanvas()">Clear Canvas (C)</button>
+            <button onclick="clearCanvas()">Clear Canvas (E)</button>
         </div>
     </div>
     <script src="script.js"></script>
