--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
             <button onclick="nextWord()">Next Word (F)</button>
             <h3>Chapters</h3>
             <div class="chapters">
-              <input type="checkbox" name="ch1" width="20px" onchange="encodeChapters(1, this.checked)"><label for="ch1">1</label>
-              <input type="checkbox" name="ch2" width="20px" onchange="encodeChapters(2, this.checked)"><label for="ch2">2</label>
-              <input type="checkbox" name="ch3" width="20px" onchange="encodeChapters(3, this.checked)"><label for="ch3">3</label>
-              <input type="checkbox" name="ch4" width="20px" onchange="encodeChapters(4, this.checked)"><label for="ch4">4</label>
+              <input type="checkbox" name="ch1" width="20px" checked onchange="encodeChapters(1, this.checked)"><label for="ch1">1</label>
+              <input type="checkbox" name="ch2" width="20px" checked onchange="encodeChapters(2, this.checked)"><label for="ch2">2</label>
+              <input type="checkbox" name="ch3" width="20px" checked onchange="encodeChapters(3, this.checked)"><label for="ch3">3</label>
+              <input type="checkbox" name="ch4" width="20px" checked onchange="encodeChapters(4, this.checked)"><label for="ch4">4</label>
+              <input type="checkbox" name="ch5" width="20px" checked onchange="encodeChapters(5, this.checked)"><label for="ch5">5</label>
+              <input type="checkbox" name="ch6" width="20px" checked onchange="encodeChapters(6, this.checked)"><label for="ch6">6</label>
             </div>
         </div>
     </div>
