Added fullscreen checkbox for tablet

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </div>
             <div class="selector">  
               <input type="checkbox" name="random" id="random" checked onchange="randomiseList(this.checked)"><label for="random">Randomise Word</label>
+              <input type="checkbox" name="fullscreen" id="fullscreen" onchange="fullScreen(this.checked)"><label for="fullscreen">Full screen</label>
             </div>
         </div>
     </div>
