--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
               <input type="checkbox" name="ch4" width="20px" checked onchange="encodeChapters(4, this.checked)"><label for="ch4">4</label>
               <input type="checkbox" name="ch5" width="20px" checked onchange="encodeChapters(5, this.checked)"><label for="ch5">5</label>
               <input type="checkbox" name="ch6" width="20px" checked onchange="encodeChapters(6, this.checked)"><label for="ch6">6</label>
+              <input type="checkbox" name="ch7" width="20px" checked onchange="encodeChapters(7, this.checked)"><label for="ch7">7</label>
+              <input type="checkbox" name="ch8" width="20px" checked onchange="encodeChapters(8, this.checked)"><label for="ch8">8</label>
             </div>
             <div class="selector">  
               <input type="checkbox" name="random" id="random" checked onchange="randomiseList(this.checked)"><label for="random">Randomise Word</label>
